--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -1,56 +1,74 @@
-
 :root {
-    --halton-clr-card-icon: #55924D;
 }
 
 @layer halton-card {
+  .halton-card.card {
+    background-color: var(--halton-clr-neutral-light);
+  }
 
-    .halton-card.card {
-        background-color: var(--halton-clr-neutral-light);
+  .halton-card {
+    padding: 20px;
+    border-width: 0;
+    border-radius: 0;
+
+    &.card-icon {
+      padding-top: 55px;
     }
 
-    .halton-card {
-        padding: 20px;
-        border-width: 0;
-        border-radius: 0;
+    .card-block {
 
-        &.card-icon {
-            padding-top: 55px;
-        }
-
-        .card-block {
-            margin-bottom: 20px!important;
-
-            &:last-of-type {
-                margin-bottom: 0px!important;
-            }
-        }
-
-        .card-body {
-            padding: 0!important;
-        }
-        .card-title {
-            margin-top: 0!important;
-        }
-        .card-footer {
-            margin-top: 20px;
-        }
-        .card-subtitle {
-            margin-bottom: 5px!important;
-        }
-        a:not(.btn) {
-            // text-decoration: underline !important;
-            color: var(--halton-clr-link) !important;
-            &:hover {
-                text-decoration: none !important;
-            }
-        }
-        p:last-child {
-            margin-bottom: 0!important;
-        }
+      &:last-of-type {
+      }
     }
-    .halton-card.card-icon::before {
-        color: var(--halton-clr-card-icon)!important;
-        top: 10px;
+
+    .card-body {
     }
+    .card-title {
+    }
+    .card-footer {
+      margin-top: 20px;
+    }
+    .card-subtitle {
+    }
+    a:not(.btn) {
+      // text-decoration: underline !important;
+      color: var(--halton-clr-link) !important;
+      &:hover {
+        text-decoration: none !important;
+      }
+    }
+    p:last-child {
+    }
+  }
+  .halton-card.card-icon::before {
+  }
+  .halton-card.card-community.card-icon::before {
+    color: #000000 !important;
+    top: 10px;
+  }
+}
+
+.card-community {
+  width: 100%;
+  height: 100%;
+  padding: 30px;
+  justify-content: center;
+  align-items: center;
+  display: inline-flex;
+  &.card-icon {
+    justify-content: left;
+    padding-top: 55px;
+  }
+  &.card-1 {
+    background: #f0f7fe !important;
+  }
+  &.card-2 {
+    background: #fff5ee !important;
+  }
+  &.card-3 {
+    background: #f0fff3 !important;
+  }
+  &.card-4 {
+    background: #fbf2ff !important;
+  }
 }
