--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -1,4 +1,5 @@
 :root {
+  --halton-card-padding: 20px;
 }
 
 @layer halton-card {
@@ -7,9 +8,15 @@
   }
 
   .halton-card {
-    padding: 20px;
+    padding: var(--halton-card-padding);
     border-width: 0;
     border-radius: 0;
+
+
+
+    @container (min-width: 500px) {
+        --halton-card-padding: 50px;
+    }
 
     &.card-icon {
       padding-top: 55px;
