1. Color of all links changed 2. Navigation enabled for all links 3. Guidelines droupdown content added 4. All contents on page synced with original page

--- a/styles/framework/_bootstrap-overwrite.scss
+++ b/styles/framework/_bootstrap-overwrite.scss
@@ -16,7 +16,6 @@
   ul:not(.halton-nav-tabs) a,
   ol a,
   a.text-icon {
-
     &:hover {
     }
   }
@@ -46,10 +45,9 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-.text-color {
-  color: #313d2f !important;
-  text-decoration: underline !important;
+.text-decoration {
+  text-decoration: none;
   &:hover {
-    text-decoration: none !important;
+    text-decoration: underline !important;
   }
 }
