Fixing markup sementic

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -26,6 +26,7 @@
 @layer components {
     @import 'components/calloutbox';
     @import 'components/collapse';
+    @import 'components/modal';
     @import 'components/icons';
     @import 'components/icons-before';
     @import 'components/icons-after';
