--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -8,4 +8,6 @@
     --halton-clr-link: #034EA2;
     --halton-clr-accent: #447a38;
     --site-clr-headings: #24272B;
+
+    --halton-body-font-size: 16px;
 }
