--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -10,4 +10,12 @@
     --site-clr-headings: #24272B;
 
     --halton-body-font-size: 16px;
+
+
+    --halton-clr-alert-success-bg: #EDF7E9;
+    --halton-clr-alert-success-bdr: #B9E3A8;
+    --halton-clr-alert-warning-bg: #F7F6E9;
+    --halton-clr-alert-warning-bdr: #F9F18C;
+    --halton-clr-alert-info-bg: #D9ECF7;
+    --halton-clr-alert-info-bdr: #96D1F3;
 }
