--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -21,6 +21,19 @@
     border-width: 0;
     border-radius: 0;
 
+    &.halton-card--small {
+      &.card-icon {
+        padding-top: calc( var(--halton-card-icon-padding-top) / 1.5);
+        &::before {
+          top: calc( var(--halton-card-icon-top-pos) / 2);
+        }
+      }
+      padding-top: calc( var(--halton-card-padding) / 2);
+      padding-right: calc( var(--halton-card-padding) / 2);
+      padding-bottom: calc( var(--halton-card-padding) / 2);
+      padding-left: calc( var(--halton-card-padding) / 2);
+    }
+
     // ...
     @container (min-width: 500px) {
       --halton-card-icon-padding-top: 100px;
