--- a/styles/components/_collapse.scss
+++ b/styles/components/_collapse.scss
@@ -12,6 +12,10 @@
         margin: 0!important;
     }
 
+    .panel-title {
+        font-weight: bold;
+    }
+
     .panel {
         border-radius: 0!important;
         box-shadow: 0 0 0 rgba(0,0,0,.05)!important;
